--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-	"name": "lunar-pink",
-	"displayName": "Lunar Pink Theme",
+	"name": "lunar-pink-da-nami",
+	"displayName": "Lunar Pink Theme da Nami",
 	"description": "A vibrantly colored theme for VSCode",
 	"version": "1.4.0",
-	"publisher": "nicolasdschmidt",
+	"publisher": "thaissaleslye",
 	"author": {
 		"name": "Nícolas D. Schmidt",
 		"email": "nicolasdschmidt@protonmail.com",
